[gd_scene load_steps=41 format=2]

[ext_resource path="res://Sprites/Player/Idle .png" type="Texture" id=1]
[ext_resource path="res://Sprites/tileset/stage3/tileset_stage3.tres" type="TileSet" id=2]
[ext_resource path="res://Sprites/tileset/Hidden.tres" type="TileSet" id=3]
[ext_resource path="res://Sounds/Intro2.ogg" type="AudioStream" id=4]
[ext_resource path="res://spikes.tres" type="TileSet" id=5]
[ext_resource path="res://Sprites/Prince/prince.png" type="Texture" id=6]
[ext_resource path="res://Intro2.gd" type="Script" id=7]
[ext_resource path="res://Sounds/Intro2bg.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sprites/Prince/WTF In (24x8).png" type="Texture" id=9]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Background/bg2.jpg" type="Texture" id=11]
[ext_resource path="res://scene_manager.tscn" type="PackedScene" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 34, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 34, 0, 34, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 68, 0, 34, 16 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Intro2" type="Node2D"]
script = ExtResource( 7 )

[node name="bg2" type="Sprite" parent="."]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
light_mask = 3
position = Vector2( 192, 88 )
scale = Vector2( 0.487536, 0.487536 )
texture = ExtResource( 11 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 20.9803, 111.334 )
frames = SubResource( 12 )
frame = 9
playing = true

[node name="Hidden" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0 )

[node name="spikes" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="bg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -29.814
autoplay = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524288, 47, 0, 524289, 47, 1, 524290, 47, 1, 524291, 47, 2, 524303, 47, 0, 524304, 47, 1, 524305, 47, 1, 524306, 47, 1, 524307, 47, 2, 589824, 47, 65536, 589825, 47, 65537, 589826, -1073741777, 65537, 589827, 47, 131077, 589828, 47, 1, 589829, 47, 1, 589830, 47, 1, 589831, 47, 1, 589832, 47, 1, 589833, 47, 1, 589834, 47, 1, 589835, 47, 1, 589836, 47, 1, 589837, 47, 1, 589838, 47, 1, 589839, 47, 131078, 589840, 47, 65537, 589841, 47, 65537, 589842, 47, 65537, 589843, 47, 65538, 655360, 47, 131072, 655361, 47, 131073, 655362, 47, 131073, 655363, 47, 131073, 655364, 47, 131073, 655365, 47, 131073, 655366, 47, 131073, 655367, 47, 131073, 655368, 47, 131073, 655369, 47, 131073, 655370, 47, 131073, 655371, 47, 131073, 655372, 47, 131073, 655373, 47, 131073, 655374, 47, 131073, 655375, 47, 131073, 655376, 47, 131073, 655377, 47, 131073, 655378, 47, 131073, 655379, 47, 131074 )

[node name="Intro2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="startdelay" type="Timer" parent="."]
one_shot = true

[node name="enddelay" type="Timer" parent="."]

[node name="enemy" parent="." instance=ExtResource( 10 )]
position = Vector2( 288, 112 )

[node name="enemy2" parent="." instance=ExtResource( 10 )]
position = Vector2( 304, 112 )

[node name="Prince" type="AnimatedSprite" parent="."]
position = Vector2( 256, 112 )
frames = SubResource( 24 )
frame = 4
playing = true
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 240, 104 )
frames = SubResource( 28 )
frame = 2
playing = true
flip_h = true

[node name="scene_manager" parent="." instance=ExtResource( 12 )]
[connection signal="finished" from="Intro2" to="." method="_on_Intro2_finished"]
[connection signal="timeout" from="startdelay" to="." method="_on_startdelay_timeout"]
[connection signal="timeout" from="enddelay" to="." method="_on_enddelay_timeout"]
